feat: 🎸 Prapare the border-patch integration

--- a/dmenu.1
+++ b/dmenu.1
@@ -17,6 +17,9 @@ dmenu \- dynamic menu
 .IR font ]
 .RB [ \-p
 .IR prompt ]
+\" >>>>>>>>>>>>>>>>>>>> border
+\" ==================== border
+\" <<<<<<<<<<<<<<<<<<<< border
 .RB [ \-nb
 .IR color ]
 .RB [ \-nf
@@ -68,6 +71,9 @@ defines the font or font set used.
 .BI \-p " prompt"
 defines the prompt to be displayed to the left of the input field.
 .TP
+\" >>>>>>>>>>>>>>>>>>>> border
+\" ==================== border
+\" <<<<<<<<<<<<<<<<<<<< border
 .BI \-nb " color"
 defines the normal background color.
 .IR #RGB ,
