feat: 🎸 Prepare case-insensitive-patch integration

--- a/dmenu.1
+++ b/dmenu.1
@@ -7,6 +7,9 @@ dmenu \- dynamic menu
 .RB [ \-f ]
 .RB [ \-i ]
 .RB [ \-v ]
+\" >>>>>>>>>>>>>>>>>>>> case-insensitive
+\" ==================== case-insensitive
+\" <<<<<<<<<<<<<<<<<<<< case-insensitive
 .RB [ \-m
 .IR monitor ]
 .RB [ \-w
@@ -56,6 +59,9 @@ dmenu matches menu items case insensitively.
 .B \-v
 prints version information to stdout, then exits.
 .TP
+\" >>>>>>>>>>>>>>>>>>>> case-insensitive
+\" ==================== case-insensitive
+\" <<<<<<<<<<<<<<<<<<<< case-insensitive
 .BI \-m " monitor"
 dmenu is displayed on the monitor number supplied. Monitor numbers are starting
 from 0.
