--- a/dmenu.1
+++ b/dmenu.1
@@ -10,6 +10,9 @@ dmenu \- dynamic menu
 \" >>>>>>>>>>>>>>>>>>>> case-insensitive
 \" ==================== case-insensitive
 \" <<<<<<<<<<<<<<<<<<<< case-insensitive
+\" >>>>>>>>>>>>>>>>>>>> center
+\" ==================== center
+\" <<<<<<<<<<<<<<<<<<<< center
 .RB [ \-m
 .IR monitor ]
 .RB [ \-w
@@ -62,6 +65,9 @@ prints version information to stdout, then exits.
 \" >>>>>>>>>>>>>>>>>>>> case-insensitive
 \" ==================== case-insensitive
 \" <<<<<<<<<<<<<<<<<<<< case-insensitive
+\" >>>>>>>>>>>>>>>>>>>> center
+\" ==================== center
+\" <<<<<<<<<<<<<<<<<<<< center
 .BI \-m " monitor"
 dmenu is displayed on the monitor number supplied. Monitor numbers are starting
 from 0.
