feat: 🎸 Prepare the dynamic-options-patch integration

--- a/dmenu.1
+++ b/dmenu.1
@@ -26,6 +26,9 @@ dmenu \- dynamic menu
 \" >>>>>>>>>>>>>>>>>>>> border
 \" ==================== border
 \" <<<<<<<<<<<<<<<<<<<< border
+\" >>>>>>>>>>>>>>>>>>>> dynamic-options
+\" ==================== dynamic-options
+\" <<<<<<<<<<<<<<<<<<<< dynamic-options
 .RB [ \-nb
 .IR color ]
 .RB [ \-nf
@@ -86,6 +89,9 @@ defines the prompt to be displayed to the left of the input field.
 \" >>>>>>>>>>>>>>>>>>>> border
 \" ==================== border
 \" <<<<<<<<<<<<<<<<<<<< border
+\" >>>>>>>>>>>>>>>>>>>> dynamic-options
+\" ==================== dynamic-options
+\" <<<<<<<<<<<<<<<<<<<< dynamic-options
 .BI \-nb " color"
 defines the normal background color.
 .IR #RGB ,
