feat: 🎸 Prepare the fuzzymatch-patch integration

--- a/dmenu.1
+++ b/dmenu.1
@@ -13,6 +13,9 @@ dmenu \- dynamic menu
 \" >>>>>>>>>>>>>>>>>>>> center
 \" ==================== center
 \" <<<<<<<<<<<<<<<<<<<< center
+\" >>>>>>>>>>>>>>>>>>>> fuzzymatch
+\" ==================== fuzzymatch
+\" <<<<<<<<<<<<<<<<<<<< fuzzymatch
 .RB [ \-m
 .IR monitor ]
 .RB [ \-w
@@ -71,6 +74,9 @@ prints version information to stdout, then exits.
 \" >>>>>>>>>>>>>>>>>>>> center
 \" ==================== center
 \" <<<<<<<<<<<<<<<<<<<< center
+\" >>>>>>>>>>>>>>>>>>>> fuzzymatch
+\" ==================== fuzzymatch
+\" <<<<<<<<<<<<<<<<<<<< fuzzymatch
 .BI \-m " monitor"
 dmenu is displayed on the monitor number supplied. Monitor numbers are starting
 from 0.
