--- a/dmenu.1
+++ b/dmenu.1
@@ -40,6 +40,9 @@ dmenu \- dynamic menu
 .IR color ]
 .RB [ \-sf
 .IR color ]
+\" >>>>>>>>>>>>>>>>>>>> fuzzyhighlight
+\" ==================== fuzzyhighlight
+\" <<<<<<<<<<<<<<<<<<<< fuzzyhighlight
 .P
 .BR dmenu_run " ..."
 .SH DESCRIPTION
@@ -113,6 +116,9 @@ defines the selected background color.
 .BI \-sf " color"
 defines the selected foreground color.
 .TP
+\" >>>>>>>>>>>>>>>>>>>> fuzzyhighlight
+\" ==================== fuzzyhighlight
+\" <<<<<<<<<<<<<<<<<<<< fuzzyhighlight
 .SH USAGE
 dmenu is completely controlled by the keyboard.  Items are selected using the
 arrow keys, page up, page down, home, and end.
