feat: 🎸 Prepare the grid-patch integration

--- a/dmenu.1
+++ b/dmenu.1
@@ -32,6 +32,9 @@ dmenu \- dynamic menu
 \" >>>>>>>>>>>>>>>>>>>> dynamic-options
 \" ==================== dynamic-options
 \" <<<<<<<<<<<<<<<<<<<< dynamic-options
+\" >>>>>>>>>>>>>>>>>>>> grid
+\" ==================== grid
+\" <<<<<<<<<<<<<<<<<<<< grid
 .RB [ \-nb
 .IR color ]
 .RB [ \-nf
@@ -101,6 +104,9 @@ defines the prompt to be displayed to the left of the input field.
 \" >>>>>>>>>>>>>>>>>>>> dynamic-options
 \" ==================== dynamic-options
 \" <<<<<<<<<<<<<<<<<<<< dynamic-options
+\" >>>>>>>>>>>>>>>>>>>> grid
+\" ==================== grid
+\" <<<<<<<<<<<<<<<<<<<< grid
 .BI \-nb " color"
 defines the normal background color.
 .IR #RGB ,
