feat: 🎸 Prepare the xyw-patch integration

--- a/dmenu.1
+++ b/dmenu.1
@@ -16,6 +16,9 @@ dmenu \- dynamic menu
 \" >>>>>>>>>>>>>>>>>>>> fuzzymatch
 \" ==================== fuzzymatch
 \" <<<<<<<<<<<<<<<<<<<< fuzzymatch
+\" >>>>>>>>>>>>>>>>>>>> xyw
+\" ==================== xyw
+\" <<<<<<<<<<<<<<<<<<<< xyw
 .RB [ \-m
 .IR monitor ]
 .RB [ \-w
@@ -83,6 +86,9 @@ prints version information to stdout, then exits.
 \" >>>>>>>>>>>>>>>>>>>> fuzzymatch
 \" ==================== fuzzymatch
 \" <<<<<<<<<<<<<<<<<<<< fuzzymatch
+\" >>>>>>>>>>>>>>>>>>>> xyw
+\" ==================== xyw
+\" <<<<<<<<<<<<<<<<<<<< xyw
 .BI \-m " monitor"
 dmenu is displayed on the monitor number supplied. Monitor numbers are starting
 from 0.
