feat: 🎸 Prepare the password-patch integration

--- a/dmenu.1
+++ b/dmenu.1
@@ -19,6 +19,9 @@ dmenu \- dynamic menu
 \" >>>>>>>>>>>>>>>>>>>> xyw
 \" ==================== xyw
 \" <<<<<<<<<<<<<<<<<<<< xyw
+\" >>>>>>>>>>>>>>>>>>>> password
+\" ==================== password
+\" <<<<<<<<<<<<<<<<<<<< password
 .RB [ \-m
 .IR monitor ]
 .RB [ \-w
@@ -89,6 +92,9 @@ prints version information to stdout, then exits.
 \" >>>>>>>>>>>>>>>>>>>> xyw
 \" ==================== xyw
 \" <<<<<<<<<<<<<<<<<<<< xyw
+\" >>>>>>>>>>>>>>>>>>>> password
+\" ==================== password
+\" <<<<<<<<<<<<<<<<<<<< password
 .BI \-m " monitor"
 dmenu is displayed on the monitor number supplied. Monitor numbers are starting
 from 0.
