--- a/dmenu.1
+++ b/dmenu.1
@@ -22,6 +22,9 @@ dmenu \- dynamic menu
 \" >>>>>>>>>>>>>>>>>>>> password
 \" ==================== password
 \" <<<<<<<<<<<<<<<<<<<< password
+\" >>>>>>>>>>>>>>>>>>>> incremental
+\" ==================== incremental
+\" <<<<<<<<<<<<<<<<<<<< incremental
 .RB [ \-m
 .IR monitor ]
 .RB [ \-w
@@ -95,6 +98,9 @@ prints version information to stdout, then exits.
 \" >>>>>>>>>>>>>>>>>>>> password
 \" ==================== password
 \" <<<<<<<<<<<<<<<<<<<< password
+\" >>>>>>>>>>>>>>>>>>>> incremental
+\" ==================== incremental
+\" <<<<<<<<<<<<<<<<<<<< incremental
 .BI \-m " monitor"
 dmenu is displayed on the monitor number supplied. Monitor numbers are starting
 from 0.
