feat: 🎸 Prepare the preselect-patch integration

--- a/dmenu.1
+++ b/dmenu.1
@@ -44,6 +44,9 @@ dmenu \- dynamic menu
 \" >>>>>>>>>>>>>>>>>>>> grid
 \" ==================== grid
 \" <<<<<<<<<<<<<<<<<<<< grid
+\" >>>>>>>>>>>>>>>>>>>> preselect
+\" ==================== preselect
+\" <<<<<<<<<<<<<<<<<<<< preselect
 .RB [ \-nb
 .IR color ]
 .RB [ \-nf
@@ -125,6 +128,9 @@ defines the prompt to be displayed to the left of the input field.
 \" >>>>>>>>>>>>>>>>>>>> grid
 \" ==================== grid
 \" <<<<<<<<<<<<<<<<<<<< grid
+\" >>>>>>>>>>>>>>>>>>>> preselect
+\" ==================== preselect
+\" <<<<<<<<<<<<<<<<<<<< preselect
 .BI \-nb " color"
 defines the normal background color.
 .IR #RGB ,
