feat: 🎸 Prepare the initial-text-patch integration

--- a/dmenu.1
+++ b/dmenu.1
@@ -47,6 +47,9 @@ dmenu \- dynamic menu
 \" >>>>>>>>>>>>>>>>>>>> preselect
 \" ==================== preselect
 \" <<<<<<<<<<<<<<<<<<<< preselect
+\" >>>>>>>>>>>>>>>>>>>> initial-text
+\" ==================== initial-text
+\" <<<<<<<<<<<<<<<<<<<< initial-text
 .RB [ \-nb
 .IR color ]
 .RB [ \-nf
@@ -131,6 +134,9 @@ defines the prompt to be displayed to the left of the input field.
 \" >>>>>>>>>>>>>>>>>>>> preselect
 \" ==================== preselect
 \" <<<<<<<<<<<<<<<<<<<< preselect
+\" >>>>>>>>>>>>>>>>>>>> initial-text
+\" ==================== initial-text
+\" <<<<<<<<<<<<<<<<<<<< initial-text
 .BI \-nb " color"
 defines the normal background color.
 .IR #RGB ,
