feat: 🎸 Prepare the json-patch integration

--- a/dmenu.1
+++ b/dmenu.1
@@ -50,6 +50,9 @@ dmenu \- dynamic menu
 \" >>>>>>>>>>>>>>>>>>>> initial-text
 \" ==================== initial-text
 \" <<<<<<<<<<<<<<<<<<<< initial-text
+\" >>>>>>>>>>>>>>>>>>>> json
+\" ==================== json
+\" <<<<<<<<<<<<<<<<<<<< json
 .RB [ \-nb
 .IR color ]
 .RB [ \-nf
@@ -137,6 +140,9 @@ defines the prompt to be displayed to the left of the input field.
 \" >>>>>>>>>>>>>>>>>>>> initial-text
 \" ==================== initial-text
 \" <<<<<<<<<<<<<<<<<<<< initial-text
+\" >>>>>>>>>>>>>>>>>>>> json
+\" ==================== json
+\" <<<<<<<<<<<<<<<<<<<< json
 .BI \-nb " color"
 defines the normal background color.
 .IR #RGB ,
