feat: 🎸 Prepare the managed-patch integration

--- a/dmenu.1
+++ b/dmenu.1
@@ -25,6 +25,9 @@ dmenu \- dynamic menu
 \" >>>>>>>>>>>>>>>>>>>> incremental
 \" ==================== incremental
 \" <<<<<<<<<<<<<<<<<<<< incremental
+\" >>>>>>>>>>>>>>>>>>>> managed
+\" ==================== managed
+\" <<<<<<<<<<<<<<<<<<<< managed
 .RB [ \-m
 .IR monitor ]
 .RB [ \-w
@@ -110,6 +113,9 @@ prints version information to stdout, then exits.
 \" >>>>>>>>>>>>>>>>>>>> incremental
 \" ==================== incremental
 \" <<<<<<<<<<<<<<<<<<<< incremental
+\" >>>>>>>>>>>>>>>>>>>> managed
+\" ==================== managed
+\" <<<<<<<<<<<<<<<<<<<< managed
 .BI \-m " monitor"
 dmenu is displayed on the monitor number supplied. Monitor numbers are starting
 from 0.
