feat: 🎸 Prepare the reject-no-match-patch integration

--- a/dmenu.1
+++ b/dmenu.1
@@ -28,6 +28,9 @@ dmenu \- dynamic menu
 \" >>>>>>>>>>>>>>>>>>>> managed
 \" ==================== managed
 \" <<<<<<<<<<<<<<<<<<<< managed
+\" >>>>>>>>>>>>>>>>>>>> reject-no-match
+\" ==================== reject-no-match
+\" <<<<<<<<<<<<<<<<<<<< reject-no-match
 .RB [ \-m
 .IR monitor ]
 .RB [ \-w
@@ -116,6 +119,9 @@ prints version information to stdout, then exits.
 \" >>>>>>>>>>>>>>>>>>>> managed
 \" ==================== managed
 \" <<<<<<<<<<<<<<<<<<<< managed
+\" >>>>>>>>>>>>>>>>>>>> reject-no-match
+\" ==================== reject-no-match
+\" <<<<<<<<<<<<<<<<<<<< reject-no-match
 .BI \-m " monitor"
 dmenu is displayed on the monitor number supplied. Monitor numbers are starting
 from 0.
