feat: 🎸 Prepare the prefix-completition-patch integration

--- a/dmenu.1
+++ b/dmenu.1
@@ -31,6 +31,9 @@ dmenu \- dynamic menu
 \" >>>>>>>>>>>>>>>>>>>> reject-no-match
 \" ==================== reject-no-match
 \" <<<<<<<<<<<<<<<<<<<< reject-no-match
+\" >>>>>>>>>>>>>>>>>>>> prefix-completition
+\" ==================== prefix-completition
+\" <<<<<<<<<<<<<<<<<<<< prefix-completition
 .RB [ \-m
 .IR monitor ]
 .RB [ \-w
@@ -122,6 +125,9 @@ prints version information to stdout, then exits.
 \" >>>>>>>>>>>>>>>>>>>> reject-no-match
 \" ==================== reject-no-match
 \" <<<<<<<<<<<<<<<<<<<< reject-no-match
+\" >>>>>>>>>>>>>>>>>>>> prefix-completition
+\" ==================== prefix-completition
+\" <<<<<<<<<<<<<<<<<<<< prefix-completition
 .BI \-m " monitor"
 dmenu is displayed on the monitor number supplied. Monitor numbers are starting
 from 0.
