feat: 🎸 Prepare the instant-patch integration

--- a/dmenu.1
+++ b/dmenu.1
@@ -34,6 +34,9 @@ dmenu \- dynamic menu
 \" >>>>>>>>>>>>>>>>>>>> prefix-completition
 \" ==================== prefix-completition
 \" <<<<<<<<<<<<<<<<<<<< prefix-completition
+\" >>>>>>>>>>>>>>>>>>>> instant
+\" ==================== instant
+\" <<<<<<<<<<<<<<<<<<<< instant
 .RB [ \-m
 .IR monitor ]
 .RB [ \-w
@@ -128,6 +131,9 @@ prints version information to stdout, then exits.
 \" >>>>>>>>>>>>>>>>>>>> prefix-completition
 \" ==================== prefix-completition
 \" <<<<<<<<<<<<<<<<<<<< prefix-completition
+\" >>>>>>>>>>>>>>>>>>>> instant
+\" ==================== instant
+\" <<<<<<<<<<<<<<<<<<<< instant
 .BI \-m " monitor"
 dmenu is displayed on the monitor number supplied. Monitor numbers are starting
 from 0.
