feat: 🎸 Prepare the navhistory-patch integration

--- a/dmenu.1
+++ b/dmenu.1
@@ -65,6 +65,9 @@ dmenu \- dynamic menu
 \" >>>>>>>>>>>>>>>>>>>> json
 \" ==================== json
 \" <<<<<<<<<<<<<<<<<<<< json
+\" >>>>>>>>>>>>>>>>>>>> navhistory
+\" ==================== navhistory
+\" <<<<<<<<<<<<<<<<<<<< navhistory
 .RB [ \-nb
 .IR color ]
 .RB [ \-nf
@@ -167,6 +170,9 @@ defines the prompt to be displayed to the left of the input field.
 \" >>>>>>>>>>>>>>>>>>>> json
 \" ==================== json
 \" <<<<<<<<<<<<<<<<<<<< json
+\" >>>>>>>>>>>>>>>>>>>> navhistory
+\" ==================== navhistory
+\" <<<<<<<<<<<<<<<<<<<< navhistory
 .BI \-nb " color"
 defines the normal background color.
 .IR #RGB ,
