feat: 🎸 Prepare the line-height patch integration

--- a/dmenu.1
+++ b/dmenu.1
@@ -68,6 +68,9 @@ dmenu \- dynamic menu
 \" >>>>>>>>>>>>>>>>>>>> navhistory
 \" ==================== navhistory
 \" <<<<<<<<<<<<<<<<<<<< navhistory
+\" >>>>>>>>>>>>>>>>>>>> line-height
+\" ==================== line-height
+\" <<<<<<<<<<<<<<<<<<<< line-height
 .RB [ \-nb
 .IR color ]
 .RB [ \-nf
@@ -173,6 +176,9 @@ defines the prompt to be displayed to the left of the input field.
 \" >>>>>>>>>>>>>>>>>>>> navhistory
 \" ==================== navhistory
 \" <<<<<<<<<<<<<<<<<<<< navhistory
+\" >>>>>>>>>>>>>>>>>>>> line-height
+\" ==================== line-height
+\" <<<<<<<<<<<<<<<<<<<< line-height
 .BI \-nb " color"
 defines the normal background color.
 .IR #RGB ,
