feat: 🎸 Prepare the high-priority patch integration

--- a/dmenu.1
+++ b/dmenu.1
@@ -74,6 +74,9 @@ dmenu \- dynamic menu
 \" >>>>>>>>>>>>>>>>>>>> line-height
 \" ==================== line-height
 \" <<<<<<<<<<<<<<<<<<<< line-height
+\" >>>>>>>>>>>>>>>>>>>> high-priority
+\" ==================== high-priority
+\" <<<<<<<<<<<<<<<<<<<< high-priority
 .RB [ \-nb
 .IR color ]
 .RB [ \-nf
@@ -185,6 +188,9 @@ defines the prompt to be displayed to the left of the input field.
 \" >>>>>>>>>>>>>>>>>>>> line-height
 \" ==================== line-height
 \" <<<<<<<<<<<<<<<<<<<< line-height
+\" >>>>>>>>>>>>>>>>>>>> high-priority
+\" ==================== high-priority
+\" <<<<<<<<<<<<<<<<<<<< high-priority
 .BI \-nb " color"
 defines the normal background color.
 .IR #RGB ,
